--- a/src/Argon/WebBundle/Resources/scss/default/_base.scss
+++ b/src/Argon/WebBundle/Resources/scss/default/_base.scss
@@ -6,6 +6,7 @@ body {
   line-height: 1.4;
   color:            $color-foreground;
   background-color: $color-background;
+  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAMAAACeL25MAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAAZQTFRF////zsrFFOhhzwAAAA9JREFUeNpiYGTAAAABBgAAJwAC/BnsgQAAAABJRU5ErkJggg==);
 }
 
 a {
