--- a/src/Argon/GameBundle/Resources/views/Block/characters.html.twig
+++ b/src/Argon/GameBundle/Resources/views/Block/characters.html.twig
@@ -1,38 +1,35 @@
-{% trans_default_domain 'web' %}
-
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>{{ 'character.info'|trans }}</th>
-            <th class="text-right">&nbsp;</th>
-        </tr>
-    </thead>
-    <tbody>
-    {% for character in entities %}
-        <tr>
-            <td>
-                {{ character.game.info.fullname }} / <a href="{{ path('character_view', {'slug': character.slug}) }}">{{ character.name }}</a> (
-                    <span class="glyphicon glyphicon-signal"></span> {{ character.skillsExperience }}/{{ character.experience }}
-                )<br>
-                {{ character.race }}
-            </td>
-            <td class="text-right">
-                <a href="{{ path('homepage', {'_switch': character.slug}) }}" class="btn btn-link">{{ 'character.switch'|trans }} <span class="glyphicon glyphicon-log-in"></span></a>
-                <a href="{{ path('character_edit', {'slug': character.slug}) }}" class="btn btn-link">{{ 'character.edit'|trans }} <span class="glyphicon glyphicon-edit"></span></a>
-                <a href="{{ path('character_skills', {'slug': character.slug}) }}" class="btn btn-link">{{ 'character.skills'|trans }} <span class="glyphicon glyphicon-screenshot"></span></a>
-            </td>
-        </tr>
-    {% else %}
-        <tr class="warning">
-            <td colspan="2">{{ 'character.empty'|trans }}</td>
-        </tr>
-    {% endfor %}
-    </tbody>
-    <tfoot>
-        <tr>
-            <td colspan="2">
-                <a href="{{ path('character_game') }}" class="btn btn-default">{{ 'character.new'|trans }}</a>
-            </td>
-        </tr>
-    </tfoot>
+{% trans_default_domain "ArgonGameBundle" %}
+<table>
+  <thead>
+    <tr>
+      <th>{{ "character.info"|trans }}</th>
+      <th>&nbsp;</th>
+    </tr>
+  </thead>
+  <tbody>
+  {% for character in entities %}
+    <tr>
+      <td>
+        {{ character.game.info.fullname }} / <a href="{{ path("character_view", {"slug": character.slug}) }}">{{ character.name }}</a> ({{ character.skillsExperience }}/{{ character.experience }})<br>
+        {{ character.race }}
+      </td>
+      <td>
+        <a href="{{ path("homepage", {"_switch": character.slug}) }}">{{ "character.switch"|trans }}</a>
+        <a href="{{ path("character_edit", {"slug": character.slug}) }}">{{ "character.edit"|trans }}</a>
+        <a href="{{ path("character_skills", {"slug": character.slug}) }}">{{ "character.skills"|trans }}</a>
+      </td>
+    </tr>
+  {% else %}
+    <tr class="warning">
+      <td colspan="2">{{ "character.empty"|trans }}</td>
+    </tr>
+  {% endfor %}
+  </tbody>
+  <tfoot>
+    <tr>
+      <td colspan="2">
+        <a href="{{ path("character_game") }}">{{ "character.new"|trans }}</a>
+      </td>
+    </tr>
+  </tfoot>
 </table>
