--- a/src/Argon/NewsBundle/Resources/views/Admin/Post/new.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Admin/Post/new.html.twig
@@ -2,13 +2,13 @@
 {% trans_default_domain "ArgonNewsBundle" %}
 {% set active = "news" %}
 
-{% block title %}{{ parent() }} - {{ "admin.news.posts"|trans }} {{ "admin.news.actions.new"|trans }}{% endblock %}
+{% block title %}{{ parent() }} - {{ "admin.news.title"|trans }} {{ "admin.news.new"|trans }}{% endblock %}
 
 {% block content %}
 <ol id="breadcrumb">
   <li><a href="{{ path('admin_dashboard') }}">{{ "admin.dashboard.title"|trans }}</a></li>
-  <li><a href="{{ path('admin_news') }}">{{ "admin.news.posts"|trans }}</a></li>
-  <li class="active">{{ "admin.news.actions.new"|trans }}</li>
+  <li><a href="{{ path('admin_news') }}">{{ "admin.news.title"|trans }}</a></li>
+  <li class="active">{{ "admin.news.new"|trans }}</li>
 </ol>
 {{ form(form) }}
 {% endblock %}
