--- a/src/Argon/NewsBundle/Resources/views/Admin/Post/publish.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Admin/Post/publish.html.twig
@@ -2,15 +2,15 @@
 {% trans_default_domain "ArgonNewsBundle" %}
 {% set active = "news" %}
 
-{% block title %}{{ parent() }} - {{ "admin.news.posts"|trans }} - {{ post }} - {{ "admin.news.actions.publish"|trans }}{% endblock %}
+{% block title %}{{ parent() }} - {{ "admin.news.title"|trans }} - {{ post }} - {{ "admin.news.publish"|trans }}{% endblock %}
 
 {% block content %}
 <ol id="breadcrumb">
   <li><a href="{{ path("admin_dashboard") }}">{{ "admin.dashboard.title"|trans }}</a></li>
-  <li><a href="{{ path("admin_news") }}">{{ "admin.news.posts"|trans }}</a></li>
+  <li><a href="{{ path("admin_news") }}">{{ "admin.news.title"|trans }}</a></li>
   <li><a href="{{ path("admin_news_view", {"slug": post.slug}) }}">{{ post }}</a></li>
-  <li class="active">{{ "admin.news.actions.publish"|trans }}</li>
+  <li class="active">{{ "admin.news.publish"|trans }}</li>
 </ol>
-<div class="alert alert-warning">{{ "admin.news.post.publish_confirm"|trans({"%post%": post}) }}</div>
+<div class="alert alert-warning">{{ "admin.news.publish_confirm"|trans({"%post%": post}) }}</div>
 {{ form(form) }}
 {% endblock %}
